package pl.multiplex.sales;

public interface Buyer {
    String getDisplayName();
}
