package pl.multiplex.screening;

public enum AgeRating {
    FAMILY,
    OVER_12,
    OVER_16,
    OVER_18
}
