package pl.multiplex.screening;

public enum LanguageOption {
    DUBBING_PL,
    PL,
    EN_PL_SUBS
}
