package pl.multiplex.screening;

public enum ScreeningClass {
    STANDARD,
    VIP
}
