package pl.multiplex.screening;

public enum ScreeningFormat {
    TWO_D,
    THREE_D
}
