package pl.multiplex.screening;

public enum SeatStatus {
    FREE,
    RESERVED,
    SOLD
}
