package pl.multiplex.shared;

public enum SeatZone {
    STANDARD,
    VIP,
    PROMO,
    SUPER_PROMO
}
